refactor: 상품상세 조회 메서드 분리 및 옵션 예외처리#33